--- a/translations/index.html
+++ b/translations/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/png" href="https://jakel181.me/SDS-Translators/favicon.ico">
-<link rel='stylesheet' type='text/css' href='https://jakel181.me/SDS-Translators/style.css'>
+<link rel="shortcut icon" type="image/png" href="https://jakel181-test.github.io/SDS-Translators/favicon.ico">
+<link rel='stylesheet' type='text/css' href='https://jakel181-test.github.io/SDS-Translators/style.css'>
 <title>Translations</title>
 <style>
 div.gallerycurrent {
@@ -48,10 +48,10 @@ div.desc {
     <center>
   <h1>Current SDS:</h1>
 <div class="gallerycurrent">
-  <a href="https://jakel181.me/SDS-Translators/translations/Year-3000/">
+  <a href="https://jakel181-test.github.io/translations/Next SDS/">
     <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
   </a>
-  <div class="desc">Year 3000</div>
+  <div class="desc">Next SDS</div>
 </div>
     </center>
   <br />
@@ -65,30 +65,12 @@ div.desc {
   <br />
 <h2>Past SDS:</h2>
   <div class="gallerypost">
-  <a href="https://jakel181.me/SDS-Translators/translations/Year-3000/">
-    <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
+  <a href="">
+    <img src="" alt="None Yet!" width="400" height="260">
   </a>
-  <div class="desc">Year 3000</div>
+  <div class="desc">None Yet!</div>
     </div>
-  <div class="gallerypost">
-  <a href="https://jakel181.me/SDS-Translators/translations/Year-3000/">
-    <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
-  </a>
-  <div class="desc">Year 3000</div>
-    </div>
-  <div class="gallerypost">
-  <a href="https://jakel181.me/SDS-Translators/translations/Year-3000/">
-    <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
-  </a>
-  <div class="desc">Year 3000</div>
-    </div>
-  <div class="gallerypost">
-  <a href="https://jakel181.me/SDS-Translators/translations/Year-3000/">
-    <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
-  </a>
-  <div class="desc">Year 3000</div> 
-    </div>
-   
+  
   </p>
 </body>
 </html>
