--- a/translations/index.html
+++ b/translations/index.html
@@ -48,7 +48,7 @@ div.desc {
     <center>
   <h1>Current SDS:</h1>
 <div class="gallerycurrent">
-  <a href="https://jakel181-test.github.io/translations/Next SDS/">
+  <a href="https://jakel181-test.github.io/translations/SDS114/">
     <img src="https://cdn2.scratch.mit.edu/get_image/gallery/5801323_200x130.png" alt="Year 3000" width="400" height="260">
   </a>
   <div class="desc">Next SDS</div>
