--- a/translations/SDS114/index.html
+++ b/translations/SDS114/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" type="image/png" href="https://jakel181.me/SDS-Translators/favicon.ico">
-<link rel='stylesheet' type='text/css' href='https://jakel181.me/SDS-Translators/style.css'>
+<link rel="shortcut icon" type="image/png" href="https://jakel181-test.github.io/SDS-Translators/favicon.ico">
+<link rel='stylesheet' type='text/css' href='https://jakel181-test.github.io/SDS-Translators/style.css'>
 <title>Translations</title>
 </head>
   <p>space holder</p>  
