--- a/translations/SDS114/index.html
+++ b/translations/SDS114/index.html
@@ -57,7 +57,7 @@ Need some additional ideas to get started? Try out some of these: - Create an in
         Check out this account for new updates on the SDS, new SDS curators and more! <a href="https://scratch.mit.edu/users/SDS-Updates/">@SDS-Updates</a>
         <br/><br/>
 
-        Credit to @ScratchCat for the thumbnail!
+        Credit to @oriquack for the thumbnail!
 
         <br/></p>
       <div id="credits">
