--- a/translations/SDS114/index.html
+++ b/translations/SDS114/index.html
@@ -22,13 +22,11 @@
       </ul>
     </div>
     <div id="content">
-      <h2 id="sdsTitle">Year 3000</h2>
+      <h2 id="sdsTitle">Title</h2>
       <p id="translatorCredit"></p>
       <p id="uniqueDescription">
-        Year 3000<br/>
-        Have you ever wondered what life might be like in the year 3000? Here is your chance to share your dreams and wishes for the future! In this Scratch Design Studio, create a project that takes us to the future as imagined by YOU! What do you hope food will be like? What do you wish transportation will be like in the year 3000? What do you hope for the world or your community? How will we communicate? How will we dance? 
-
-Need some additional ideas to get started? Try out some of these: - Create an interactive map of what a city in the year 3000 might look like - Invent a new tool that will be used in the year 3000 and make an animation about it - Share an animation about what you hope the world will be like in 3000 - Make a dress-up game showing fashion in the year 3000 Remember, you aren’t limited to these ideas. We encourage you to be creative!
+        Frist Line<br/>
+        Unique
         <br/>
         <br/>
       </p>
@@ -57,7 +55,7 @@ Need some additional ideas to get started? Try out some of these: - Create an in
         Check out this account for new updates on the SDS, new SDS curators and more! <a href="https://scratch.mit.edu/users/SDS-Updates/">@SDS-Updates</a>
         <br/><br/>
 
-        Credit to @oriquack for the thumbnail!
+        Credit to @ScratchCat for the thumbnail!
 
         <br/></p>
       <div id="credits">
