--- a/translate/index.html
+++ b/translate/index.html
@@ -18,15 +18,8 @@
       <p>Then, simply type in the translation of each part into the text box below it.</p>
       <p>Once you start typing, a new section labeled "Result" should appear at the bottom of the page.</p>
       <br/>
-      <b><p>If you have a Github account:</p></b>
-      <p>Once you are done translating all of the parts, open this link in a new tab: <a href="https://github.com/scratchdesignstudio/info#fork-destination-box">Fork the info repository</a></p>
-      <p>Now you have two options: </p>
-      <p>a) Make a .txt file containing the result in your fork </p>
-      <p>b) Directly add the result into the l10n.js file</p>
-      <br/>
-      <b><p>If you do not have a Github account:</p></b>
       <p>Once you are done translating all of the parts, put the result into a .txt file.</p>
-      <p>Make sure that we can get to the .txt file by sharing on a platform such as Google Drive or pastebin</p>
+      <p>Make sure that we can get to the .txt file by sharing on a platform such as pastebin or a scratch project</p>
       <br/>
       <br/>
       <b><p>Please make sure that you copy the translation exactly!</p></b>
